--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container {
   max-width: 1280px;
   margin: 0 auto;
@@ -12,6 +18,7 @@
   height: 38px;
   padding: 8px;
   overflow: hidden;
+  
   font-size: 20px;
   border-radius: 8px;
   border: 1px solid #0000001a;
@@ -20,6 +27,7 @@
     box-shadow 0.12s linear;
   cursor: pointer;
   text-decoration: none;
+  box-sizing: border-box;
 }
 .gotoback:hover {
   background-color: #a9a3a312;
