--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,22 +7,21 @@
 .container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 4rem 2rem;
 }
+
 .gotoback {
   display: flex;
   align-items: center;
   justify-content: center;
-
   width: 128px;
   height: 38px;
   padding: 8px;
   overflow: hidden;
-  margin-bottom: 20px;
   font-size: 20px;
   border-radius: 8px;
-  border: 1px solid #0000001a;
-  background-color: #0000000b;
+  border: 1px solid #c2c2c2;
+  background-color: #f4f4f4;
   transition: translate 0.12s linear, background-color 0.12s linear,
     box-shadow 0.12s linear;
   cursor: pointer;
@@ -30,10 +29,113 @@
   box-sizing: border-box;
 }
 .gotoback:hover {
-  background-color: #a9a3a312;
-  box-shadow: 4px 4px 16px rgba(123, 123, 123, 0.18);
+  background-color: #f4f4f4;
+  box-shadow: 4px 4px 16px var(--gotoback-shadow);
+  translate: 4px -2px;
 }
 .gotoback:active {
-  box-shadow: 2px 2px 4px rgba(123, 123, 123, 0.33);
+  box-shadow: 2px 2px 4px var(--gotoback-shadow);
   translate: 0 4px;
+}
+
+.exercise_1 {
+  margin-left: 22%;
+}
+.calculator {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  max-width: 420px;
+  margin: 30px auto;
+  background: #8f8b8b;
+  border-radius: 16px;
+  padding-bottom: 30px;
+}
+.result {
+  display: flex;
+  width: 60%;
+  aspect-ratio: 1;
+  background: #7fffd4c7;
+  font-size: 93px;
+  font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  margin: 30px auto 20px;
+  border-radius: 99999px;
+  color: #213547;
+}
+
+.calc-btn {
+  width: 50%;
+  height: 40px;
+  padding: 0;
+  margin: 10px auto;
+  color: #202cff;
+  font-size: 20px;
+}
+
+/* =============== */
+.form-data {
+  display: flex;
+  flex-wrap: wrap;
+  width: 50%;
+  margin: 30px auto;
+  gap: 16px;
+  padding: 20px;
+  border-radius: 8px;
+  background: #ffffff8f;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.form-data #name,
+.form-data #email {
+  display: inline-flex;
+  flex-grow: 1;
+  flex-shrink: 0;
+  height: 38px;
+  padding: 10px;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+.form-data #body {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 0;
+  width: 100%;
+  padding: 10px;
+  resize: vertical;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+.form-data .btn-submit {
+  width: 128px;
+  margin-left: auto;
+}
+
+.form-data .btn-submit {
+  color: #fff;
+  border-radius: 6px;
+  padding: 10px 16px;
+  border: 1px solid #ccc;
+  background-color: rgb(255, 0, 255);
+  background-clip: border-box;
+  transition: opacity 0.2s linear, background-color 0.2s linear;
+}
+.form-data .btn-submit:hover {
+  opacity: 0.9;
+  outline: none;
+}
+.form-data .btn-submit:disabled {
+  background-color: #ccc;
+  pointer-events: none;
+  outline: none;
+  opacity: 0.7;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
 }
