--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,22 @@
 :root {
+  --text-color: #213547;
+  --bg-color: #fff8f8;
+  --gotoback-shadow: rgba(123, 123, 123, 0.33);
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 62.5%;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html.dark {
+  --bg-color: #17171a;
+  --text-color: #d5dde4;
+  --gotoback-shadow: rgb(74 101 255);
 }
 
 * {
@@ -23,13 +28,16 @@
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   /* place-items: center; */
   font-size: 1.6rem;
   min-width: 320px;
   min-height: 100vh;
-  flex-direction: column;
-}
 
+  color: var(--text-color);
+  background-color: var(--bg-color);
+  transition: background-color 0.25s ease, color 0.25s ease;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -40,9 +48,12 @@ a:hover {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   line-height: 1.1;
-  margin-block: 36px 16px;
+}
+
+h1 {
+  font-size: 2.4em;
 }
 
 button {
@@ -52,27 +63,39 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
+  outline: none;
   transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+#header {
+  text-align: center;
+  margin-bottom: 30px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.header {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 18px;
+}
+
+.toggle-theme {
+  padding: 0;
+  width: 32px;
+  height: 32px;
+  font-size: 16px;
+  border: 1px solid #757e854e;
+  background: transparent;
+  color: var(--text-color);
+  border-radius: 9px;
+  outline: none !important;
+  cursor: pointer;
+}
+
+#header .desc {
+  margin-top: 20px;
 }
