--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,7 +1,103 @@
+:root {
+  --text-color: #213547;
+  --bg-color: #fff8f8;
+  --gotoback-shadow: rgba(123, 123, 123, 0.33);
+
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  font-size: 62.5%;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html.dark {
+  --bg-color: #17171a;
+  --text-color: #d5dde4;
+  --gotoback-shadow: rgb(74 101 255);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  /* place-items: center; */
+  font-size: 1.6rem;
+  min-width: 320px;
+  min-height: 100vh;
+
+  color: var(--text-color);
+  background-color: var(--bg-color);
+  transition: background-color 0.25s ease, color 0.25s ease;
+}
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: none;
+}
+a:hover {
+  color: #535bf2;
+}
+
+h1 {
+  font-size: 3em;
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: 2.4em;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  outline: none;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+
+#header {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.header {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 18px;
+}
+
+.toggle-theme {
+  padding: 0;
+  width: 32px;
+  height: 32px;
+  font-size: 16px;
+  border: 1px solid #757e854e;
+  background: transparent;
+  color: var(--text-color);
+  border-radius: 9px;
+  outline: none !important;
+  cursor: pointer;
+}
+
+#header .desc {
+  margin-top: 20px;
 }
 
 .container {
