--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -17,6 +17,15 @@ html.dark {
   --bg-color: #17171a;
   --text-color: #d5dde4;
   --gotoback-shadow: rgb(74 101 255);
+  --prism-bg: #262626;
+  --blog-list-color: #a6a8aa;
+  --blog-shadow: rgb(56 76 156);
+  --blog-shadow-hover: rgb(56 156 59);
+  --vbtn-bgr-color: #7f91ff;
+  --icon-color: #7f91ff;
+  --post-time-bgr: rgba(123, 123, 123, 0.33);
+  --post-time-color: #f8f8f8;
+  --details-bgr: #57575c;
 }
 
 * {
@@ -124,6 +133,7 @@ button:hover {
   text-decoration: none;
   box-sizing: border-box;
 }
+
 .gotoback:hover {
   background-color: #f4f4f4;
   box-shadow: 4px 4px 16px var(--gotoback-shadow);
@@ -134,19 +144,26 @@ button:hover {
   translate: 0 4px;
 }
 
+/* =====================*/
+/* === Bài 1 Counter App === */
+/* ====================*/
+
 .exercise_1 {
-  margin-left: 22%;
+  text-align: center;
 }
+.wrapper,
 .calculator {
+  position: relative;
   display: flex;
   flex-direction: column;
-  width: 40%;
+  min-width: 340px;
   max-width: 420px;
   margin: 30px auto;
-  background: #8f8b8b;
   border-radius: 16px;
   padding-bottom: 30px;
+  background: var(--prism-bg, rgb(109 134 137));
 }
+
 .result {
   display: flex;
   width: 60%;
@@ -168,9 +185,379 @@ button:hover {
   margin: 10px auto;
   color: #202cff;
   font-size: 20px;
+  border-radius: 6px;
 }
 
-/* =============== */
+.electrode {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: space-between;
+  top: 50%;
+  width: 100%;
+  height: 38px;
+  padding-inline: 16px;
+}
+.anode,
+.cathode {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: inherit;
+  width: 100px;
+  background: #c9bdbd;
+  border-radius: 6px;
+  font-size: 22px;
+  font-weight: 700;
+  border: 1px solid currentColor;
+}
+.anode {
+  background: #ffc9c9;
+  color: #df0000;
+  box-shadow: -4px 7px 6px #ffc9c9;
+}
+.cathode {
+  background: #3881ff;
+  color: #000873;
+  margin-left: auto;
+  box-shadow: -4px 7px 6px #93cdff;
+}
+.anode.pressed,
+.cathode.pressed {
+  opacity: 0.6;
+  translate: -2px 6px;
+  box-shadow: -1px 2px 4px #f8f8f8;
+  transition: 0.2s linear;
+}
+
+/* ======================*/
+/* === Bài 2 Todo List App === */
+/* =====================*/
+
+.todo-list {
+  padding: 30px 20px;
+  min-height: 500px;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.list-task {
+  flex: 1;
+  overflow-y: auto;
+}
+
+.vain,
+.task-detail {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: #f8f8f8;
+  font-size: 18px;
+}
+
+.task-detail .delete-task {
+  padding: 0;
+  width: 46px;
+  height: 32px;
+  background: #e0aca2;
+  color: #a10000;
+  border: 1px solid currentColor;
+  font-size: 14px;
+}
+
+.task-ctrl {
+  width: 28px;
+  height: 28px;
+}
+.task-name {
+  flex: 1;
+  font-size: 20px;
+}
+.task-ctrl:checked + .task-name {
+  text-decoration: line-through;
+  color: #bfffb8;
+}
+
+.statistical {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: 600;
+  color: #f8f8f8;
+  margin-bottom: 20px;
+}
+
+.todo-list form {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.todo-list button,
+.todo-list input {
+  height: 42px;
+}
+.todo-list form input {
+  flex: 1px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  padding-left: 16px;
+}
+
+/* =====================*/
+/* === Bài 3 Profile Card === */
+/* ====================*/
+
+.profile-card {
+  background-color: white;
+  width: 300px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  text-align: center;
+  padding: 20px;
+}
+
+.profile-card img {
+  width: 200px;
+  height: 200px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 15px;
+}
+
+.profile-card h3 {
+  margin: 0;
+  font-size: 24px;
+  color: #333;
+}
+
+.profile-card .username {
+  color: #777;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+
+.profile-card .info {
+  text-align: left;
+  margin: 10px 0;
+  font-size: 14px;
+  color: #555;
+}
+
+.profile-card .info p {
+  margin: 8px 0;
+  display: flex;
+  align-items: center;
+}
+
+.profile-card .info p strong {
+  width: 80px;
+  color: #333;
+}
+
+.profile-card .info a {
+  color: #1e90ff;
+  text-decoration: none;
+}
+
+.profile-card .info a:hover {
+  text-decoration: underline;
+}
+
+/* ======================*/
+/* === Bài 4. Product List === */
+/* =====================*/
+.blog-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog-card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 80%;
+  margin-top: 26px;
+  padding: 20px;
+  border-radius: 16px;
+  border: 2px solid #e8e8e8;
+  box-shadow: -1px 13px 26px var(--blog-shadow, rgba(123, 123, 123, 0.33));
+  transition: box-shadow 0.2s linear;
+}
+
+.blog-card:hover {
+  box-shadow: -1px 13px 26px var(--blog-shadow-hover, #a6a8aa);
+}
+
+.blog-card .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.author {
+  display: flex;
+  align-items: center;
+}
+.avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.4rem;
+  position: relative;
+  width: 6rem;
+  height: 6rem;
+  object-fit: cover;
+  border-radius: 50%;
+  transition: opacity 0.2s linear;
+  background: linear-gradient(180deg, #ffd900, #b45264 93.68%);
+}
+.bloger {
+  font-size: 1.6em;
+  color: var(--blog-list-color, #292929);
+  font-weight: 600;
+  margin-left: 16px;
+}
+
+.actions {
+  display: flex;
+  margin-right: -8px;
+  user-select: none;
+  -webkit-user-select: none;
+}
+.blog-id {
+  color: var(--icon-color, #757575);
+  font-size: 1.8rem;
+  margin-right: 10px;
+  margin-top: 2px;
+}
+
+.option-btn,
+.toggle-btn {
+  cursor: pointer;
+  padding: 4px 8px;
+  transition: opacity 0.2s linear;
+}
+.avatar:hover,
+.option-btn:hover,
+.toggle-btn:hover {
+  opacity: 0.8;
+}
+.toggle-btn svg,
+.option-btn svg {
+  color: var(--icon-color, #757575);
+  width: 18px;
+  transition: color 0.2s linear;
+}
+
+.blog-card:hover {
+  --icon-color: var(--blog-shadow-hover, #f05123);
+}
+
+.blog-info {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.4rem;
+  flex: 1;
+  padding-right: 32px;
+}
+.blog-title {
+  color: var(--text-color, #1b1b1b);
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1.6;
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+.blog-title::first-letter {
+  text-transform: uppercase;
+}
+
+.blog-desc {
+  margin-top: 4px;
+  font-size: 1.5rem;
+  line-height: 1.6;
+  color: var(--blog-list-color, #505050);
+}
+
+.blog-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.metaInfo {
+  margin-top: 16px;
+}
+.post-time,
+.read-time {
+  padding: 4px 10px;
+  border-radius: 4px;
+  color: var(--post-time-color, #333);
+  line-height: 2rem;
+  margin-right: 12px;
+  font-weight: 500;
+  background-color: var(--post-time-bgr, #e8e8e8a6);
+}
+
+button.view-detail-btn {
+  background-color: var(--vbtn-bgr-color, #f0f0f0);
+  transition: background-color 0.2s linear;
+}
+
+button.view-detail-btn:hover {
+  --vbtn-bgr-color: var(--blog-shadow-hover);
+}
+
+.details-overlay {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000000a8;
+  z-index: -1;
+}
+
+.blog-details {
+  position: fixed;
+  inset: 26% 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  border-radius: 12px;
+  max-width: 900px;
+  min-width: 492px;
+  background-color: var(--details-bgr, floralwhite);
+  box-shadow: -1px 18px 36px var(--blog-shadow, rgba(123, 123, 123, 0.33));
+}
+
+.blog-details .blog-card {
+  width: 90%;
+  box-shadow: -1px 6px 10px var(--blog-shadow, rgba(123, 123, 123, 0.33));
+}
+
+.blog-details .blog-card:hover {
+  box-shadow: -1px 13px 26px var(--blog-shadow-hover, #a6a8aa);
+}
+
+button.close-bog-detail-btn {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+
+/* =========================*/
+/* === Bài 5. Comment System === */
+/* ========================*/
+
 .form-data {
   display: flex;
   flex-wrap: wrap;
@@ -234,4 +621,27 @@ button:hover {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
+}
+
+/* ===================== */
+/* === Bài 6. Weather App === */
+/* ===================== */
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+.exercise-content {
+  display: flex;
+  margin-inline: auto;
+  flex-direction: column;
+  align-items: center;
+}
+.answer-content {
+  margin-top: 30px;
 }
