--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -832,6 +832,7 @@ button.close-bog-detail-btn {
   padding: 10px;
 }
 .repositories {
+  display: flex;
   margin-top: 20px;
   font-size: 20px;
 }
