--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -19,6 +19,20 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html,
+body {
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  width: 2px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(9, 255, 13);
+  border-radius: 999px;
+}
 
 html.dark {
   --bg-color: #17171a;
@@ -538,7 +552,7 @@ button.view-detail-btn:hover {
   align-items: center;
   justify-content: center;
   background: #000000a8;
-  z-index: -1;
+  z-index: 999;
 }
 
 .blog-details {
@@ -551,6 +565,7 @@ button.view-detail-btn:hover {
   border-radius: 12px;
   max-width: 900px;
   min-width: 492px;
+  z-index: 99999;
   background-color: var(--details-bgr, floralwhite);
   box-shadow: -1px 18px 36px var(--blog-shadow, rgba(123, 123, 123, 0.33));
 }
@@ -778,6 +793,7 @@ button.close-bog-detail-btn {
 .weather-updated .reset:hover {
   opacity: 0.6;
 }
+
 /* ===================== */
 
 .loading {
