--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,27 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+html {
+  overflow-y: scroll;
+}
 html.dark {
   --bg-color: #17171a;
   --text-color: #d5dde4;
   --gotoback-shadow: rgb(74 101 255);
+}
+html,
+body {
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-track {
+  background: #d5dde471;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #d5dde471;
+  border-radius: 999px;
 }
 
 * {
@@ -52,8 +68,17 @@ h1 {
   line-height: 1.1;
 }
 
-h1 {
+h1.slogan {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  margin-bottom: 20px;
   font-size: 2.4em;
+}
+
+h1.slogan button {
+  margin-left: 20px;
+  margin-bottom: 4px;
 }
 
 button {
