--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,10 @@ nav ul ul {
   display: flex;
   align-items: center;
   gap: 16px;
-  font-size: 1.8rem;
+  font-size: 2.2rem;
 }
-.nav-label::after {
-  content: ">";
-  margin-bottom: 2px;
-  font-size: 20px;
+.nav-label .arrow-right {
+  font-size: 28px;
   color: #50a14f;
   transition: translate, transform 0.3s ease;
 }
@@ -48,9 +46,8 @@ nav .nav-label.open + ul {
   opacity: 1;
 }
 
-.nav-label.open::after {
+.nav-label.open .arrow-right {
   transform: rotate(450deg);
-  translate: 0 4px;
 }
 
 nav li {
@@ -68,6 +65,10 @@ nav li a {
   padding: 6px 10px;
   transition: background-color 0.2s linear;
   cursor: pointer;
+  user-select: none;
+}
+nav li a {
+  font-size: 2rem;
 }
 a.repositories {
   display: flex;
