--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,6 +207,7 @@ button:hover {
   margin: 30px auto 20px;
   border-radius: 99999px;
   color: #213547;
+  filter: drop-shadow(-4px 10px 30px #7fffd4c7);
 }
 
 .calc-btn {
