--- a/src/style/style.css
+++ b/src/style/style.css
@@ -56,6 +56,7 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: none;
+  user-select: none;
 }
 a:hover {
   color: #535bf2;
@@ -85,6 +86,7 @@ button {
   cursor: pointer;
   outline: none;
   transition: border-color 0.25s;
+  user-select: none;
 }
 button:hover {
   border-color: #646cff;
@@ -160,12 +162,12 @@ nav ul ul {
   display: flex;
   align-items: center;
   gap: 16px;
-  font-size: 2.2rem;
   box-shadow: 0px 0px 1px;
 }
 .nav-label .arrow-right {
   font-size: 28px;
   color: #50a14f;
+  margin-left: auto;
   transition: translate, transform 0.3s ease;
 }
 nav .nav-label.open + ul {
@@ -194,9 +196,9 @@ nav li a {
   transition: background-color 0.2s linear;
   cursor: pointer;
   user-select: none;
+  font-size: 1.8rem;
 }
 nav li a {
-  font-size: 2rem;
   border-bottom: 1px solid #5d697328;
 }
 
