--- a/src/style/style.css
+++ b/src/style/style.css
@@ -165,7 +165,8 @@ nav ul ul {
   box-shadow: 0px 0px 1px;
 }
 .nav-label .arrow-right {
-  font-size: 28px;
+  width: 28px;
+  aspect-ratio: 1;
   color: #50a14f;
   margin-left: auto;
   transition: translate, transform 0.3s ease;
