--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -861,6 +861,14 @@ button.close-bog-detail-btn {
 .repositories {
   display: flex;
   font-size: 20px;
+  align-items: flex-end;
+  gap: 4px;
+}
+.repositories span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 26px;
 }
 
 .back-to-top {
